Updated with new info

--- a/pblog/_posts/2024-06-07-fmod.md
+++ b/pblog/_posts/2024-06-07-fmod.md
@@ -906,15 +906,15 @@ Since we don't clear out bits from our quotient, this approach can clear more
 bits per loop iteration. If we take a look at 32-bit floats being widened to
 64-bit floats, then this loop will run for no more than 6 iterations.
 
-On x86, the negation does not even need to be a separate instruction from the
-FMA, since it has the `(v)fnmadd*****` family of instructions. These perform a
-fused-multiply-accumulate where a negation is performed on the result of the
-multiplication before performing the subsequent accumulation. Since these are
-also available in SIMD vectorized form, this approach is particularly powerful
-on this platform. That said, you could always compute `-D` upfront and keep it
-around assuming you have a spare register, which you probably do. Throw
-AVX-512F's embedded rounding into the division instruction and the loop body
-become very terse.
+On x86 and ARM, the negation does not even need to be a separate instruction
+from the FMA, since x86 has the `(v)fnmadd*****` family of instructions and ARM
+has the `FMLS` family of instructions. These perform a fused-multiply-accumulate
+where a negation is performed on the result of the multiplication before
+performing the subsequent accumulation. Since these are also available in SIMD
+vectorized form, this approach is particularly powerful. That said, you could
+always compute `-D` upfront and keep it around assuming you have a spare
+register, which you probably do. If you can, throw AVX-512F's embedded rounding
+into the division instruction and the loop body become very terse.
 
 The resulting algorithm isn't meaningfully simpler than before, but it's likely
 to be faster:
@@ -1039,7 +1039,7 @@ Beyond that, getting meaningful benchmark results is difficult for this problem
 since the runtime of these algorithms is dependent on the ratio of numerator to
 denominator, and the denominator's number of significant digits. Benchmarks
 would need to be run under the assumption of a particular ratio and a
-denominator with a certain amount of signficant digits. Then, these two
+denominator with a certain amount of significant digits. Then, these two
 parameters would need to be varied to produce a matrix of results from which the
 performance characteristics of these different algorithms could be meaningfully
 compared.
