--- a/pblog/_posts/2024-06-07-fmod.md
+++ b/pblog/_posts/2024-06-07-fmod.md
@@ -1023,7 +1023,7 @@ With ARM Neon, it's slightly inconvenient to check if a the loop condition is
 true for at least one lane since there is no counterpart to x86's movemask
 instructions. However, `umaxv` may be handy for constructing a substitute. The
 instruction performs a reduction that performs an unsigned max reduce across all
-vector lanes. Checking is this value is non zero is enough for our purposes.
+vector lanes. Checking if this value is non zero is enough for our purposes.
 
 ## TODO: Implementations and Benchmarks
 At the current time, my exploration of this problem is incomplete. I'm currently
